<resources>
    <string name="app_name">eBibliotek</string>

    <string name="btn_menu_Al">Agregar libro</string>
    <string name="btn_menu_Ll">Lista de libros</string>
    <string name="btn_menu_LA">Libros alquilados</string>

    <string name="agregar_isbn">ISBN</string>
    <string name="agregar_nombre">Nombre</string>
    <string name="agregar_autor">Autor</string>
    <string name="agregar_editorial">Editorial</string>
    <string name="agregar_publicacion">Año de publicación</string>
    <string name="agregar_edicion">Edición</string>
    <string name="agregar_portada">Portada</string>


</resources>
