<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".act_Menu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnAgregarLib"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_menu_Al" />

            <Button
                android:id="@+id/btnListaLib"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_menu_Ll" />

            <Button
                android:id="@+id/btnLibrosAlq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_menu_LA" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>